// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`start case hearing flow GET /start-case/hearing should render the date known page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - start case</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Do you know the date and time of the hearing?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="date-known" name="dateKnown" type="radio"
                                        value="yes">
                                        <label class="govuk-label govuk-radios__label" for="date-known">Yes</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="date-known-2" name="dateKnown"
                                        type="radio" value="no">
                                        <label class="govuk-label govuk-radios__label" for="date-known-2">No</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`start case hearing flow GET /start-case/hearing/confirm should render the confirm page when date is known 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and start case</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal procedure</dt>
                    <dd class="govuk-summary-list__value">Hearing</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/start-case/select-procedure?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F1%2Fstart-case%2Fselect-procedure"
                        data-cy="change-appeal-procedure">Change <span class="govuk-visually-hidden">Appeal procedure</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Do you know the date and time of the hearing?</dt>
                    <dd                     class="govuk-summary-list__value">Yes</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/start-case/hearing?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F1%2Fstart-case%2Fhearing"
                            data-cy="change-date-known">Change <span class="govuk-visually-hidden">Do you know the date and time of the hearing?</span></a>
                        </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Hearing date</dt>
                    <dd class="govuk-summary-list__value">1 February 3025</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/start-case/hearing/date?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F1%2Fstart-case%2Fhearing%2Fdate"
                        data-cy="change-hearing-date">Change <span class="govuk-visually-hidden">Hearing date</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Hearing time</dt>
                    <dd class="govuk-summary-list__value">12:00pm</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/start-case/hearing/date?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F1%2Fstart-case%2Fhearing%2Fdate"
                        data-cy="change-hearing-time">Change <span class="govuk-visually-hidden">Hearing time</span></a>
                    </dd>
                </div>
            </dl>
            <p class="govuk-body" data-cy="start-timetable-info">We’ll start the timetable now and send emails to the relevant parties.</p>
            <div             class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <details class="govuk-details" data-cy="preview-email-to-appellant">
                        <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to appellant</span>
                        </summary>
                        <div class="govuk-details__text">Rendered HTML for appellant preview</div>
                    </details>
                </div>
        </div>
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-full">
                <details class="govuk-details" data-cy="preview-email-to-lpa">
                    <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to LPA</span>
                    </summary>
                    <div class="govuk-details__text">Rendered HTML for LPA preview</div>
                </details>
            </div>
        </div>
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-full">
                <form method="post" novalidate="novalidate">
                    <button type="submit" class="govuk-button" data-module="govuk-button">Start case</button>
                </form>
            </div>
        </div>
    </div>
    </div>
</main>"
`;

exports[`start case hearing flow GET /start-case/hearing/confirm should render the confirm page when date is not known 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and start case</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal procedure</dt>
                    <dd class="govuk-summary-list__value">Hearing</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/start-case/select-procedure?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F1%2Fstart-case%2Fselect-procedure"
                        data-cy="change-appeal-procedure">Change <span class="govuk-visually-hidden">Appeal procedure</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Do you know the date and time of the hearing?</dt>
                    <dd                     class="govuk-summary-list__value">No</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/start-case/hearing?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F1%2Fstart-case%2Fhearing"
                            data-cy="change-date-known">Change <span class="govuk-visually-hidden">Do you know the date and time of the hearing?</span></a>
                        </dd>
                </div>
            </dl>
            <p class="govuk-body" data-cy="start-timetable-info">We’ll start the timetable now and send emails to the relevant parties.</p>
            <div             class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <details class="govuk-details" data-cy="preview-email-to-appellant">
                        <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to appellant</span>
                        </summary>
                        <div class="govuk-details__text">Rendered HTML for appellant preview</div>
                    </details>
                </div>
        </div>
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-full">
                <details class="govuk-details" data-cy="preview-email-to-lpa">
                    <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to LPA</span>
                    </summary>
                    <div class="govuk-details__text">Rendered HTML for LPA preview</div>
                </details>
            </div>
        </div>
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-full">
                <form method="post" novalidate="novalidate">
                    <button type="submit" class="govuk-button" data-module="govuk-button">Start case</button>
                </form>
            </div>
        </div>
    </div>
    </div>
</main>"
`;

exports[`start case hearing flow GET /start-case/hearing/date should render the date page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - start case</span>
            <h1 class="govuk-heading-l">Hearing date and time</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="hearing-date-hint">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Date</legend>
                                <div id="hearing-date-hint" class="govuk-hint">For example, 31 3 2025</div>
                                <div class="govuk-date-input" id="hearing-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="hearing-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="hearing-date-day" name="hearing-date-day" type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="hearing-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="hearing-date-month" name="hearing-date-month" type="text" value=""
                                            inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="hearing-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="hearing-date-year" name="hearing-date-year" type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <fieldset class="govuk-fieldset">
                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Time</legend>
                            <div id="hearing-date-hint" class="govuk-hint">For example, 9:00 or 13:15</div>
                            <div class="govuk-date-input">
                                <div class="govuk-date-input__item govuk-!-margin-right-1">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label" for="hearing-time-hour">Hour</label>
                                        <input class="govuk-input govuk-input--width-2" id="hearing-time-hour"
                                        name="hearing-time-hour" type="text" value="10">
                                    </div>
                                </div>
                                <div class="govuk-date-input__item govuk-!-font-size-19 govuk-!-padding-0 govuk-!-margin-right-1">:</div>
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label" for="hearing-time-minute">Minute</label>
                                        <input class="govuk-input govuk-input--width-2" id="hearing-time-minute"
                                        name="hearing-time-minute" type="text" value="00">
                                    </div>
                                </div>
                            </div>
                        </fieldset>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
